--- a/Code/models/KNN.ipynb
+++ b/Code/models/KNN.ipynb
@@ -20,6 +20,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "540a6c5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score, log_loss, roc_auc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "94268c09",
    "metadata": {},
    "outputs": [
@@ -58,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "49323240",
    "metadata": {},
    "outputs": [
@@ -82,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ac1d1fd5",
    "metadata": {},
    "outputs": [
@@ -128,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "34512a0e",
    "metadata": {},
    "outputs": [
@@ -149,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7717abaa",
    "metadata": {},
    "outputs": [
@@ -184,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4c88e9f8",
    "metadata": {},
    "outputs": [
@@ -231,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "baaaacf0",
    "metadata": {},
    "outputs": [
@@ -253,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "82102b3f",
    "metadata": {},
    "outputs": [
@@ -304,6 +317,100 @@
     "\n",
     "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred_test_p1))\n",
     "print(\"\\nConfusion Matrix:\\n\", confusion_matrix(y_test, y_pred_test_p1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f2ac7d3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KNN pickle bundle saved to:\n",
+      "../../Results/Visualizations/knn_bundle.pkl\n",
+      "Bundle keys: ['model_name', 'y_test', 'y_pred', 'y_proba', 'confusion_matrix', 'accuracy', 'precision_macro', 'recall_macro', 'f1_macro', 'log_loss', 'roc_auc_ovr', 'params', 'feature_names', 'X_test_sample', 'subsample_fraction', 'val_f1_p1', 'val_f1_p2', 'best_params_p1', 'best_score_p1', 'best_params_p2', 'best_score_p2', 'cv_results_p1', 'cv_results_p2', 'k_values', 'knn_p1_model', 'knn_p2_model']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# 1. Build confusion matrix for FINAL MODEL (p = 1)\n",
+    "cm_p1 = confusion_matrix(y_test, y_pred_test_p1)\n",
+    "\n",
+    "\n",
+    "# 2. Build full results dictionary (\"bundle\")\n",
+    "bundle = {\n",
+    "    \"model_name\": \"KNN (p=1, Manhattan)\",\n",
+    "\n",
+    "    # Core evaluation arrays (for common visualizations) \n",
+    "    # Final chosen model = knn_p1\n",
+    "    \"y_test\": y_test,\n",
+    "    \"y_pred\": y_pred_test_p1,\n",
+    "    \"y_proba\": y_proba_test_p1,\n",
+    "\n",
+    "    \"confusion_matrix\": cm_p1,\n",
+    "\n",
+    "    # Scalar performance metrics for final model\n",
+    "    \"accuracy\": accuracy_score(y_test, y_pred_test_p1),\n",
+    "    \"precision_macro\": precision_score(y_test, y_pred_test_p1, average=\"macro\", zero_division=0),\n",
+    "    \"recall_macro\": recall_score(y_test, y_pred_test_p1, average=\"macro\", zero_division=0),\n",
+    "    \"f1_macro\": f1_score(y_test, y_pred_test_p1, average=\"macro\", zero_division=0),\n",
+    "    \"log_loss\": log_loss(y_test, y_proba_test_p1),\n",
+    "    \"roc_auc_ovr\": roc_auc_score(y_test, y_proba_test_p1, multi_class=\"ovr\"),\n",
+    "\n",
+    "    # Hyperparameters of final model\n",
+    "    \"params\": knn_p1.get_params(),\n",
+    "\n",
+    "    # Input feature names (if DataFrame columns exist)\n",
+    "    \"feature_names\": X_train.columns.to_numpy() if hasattr(X_train, \"columns\") else None,\n",
+    "\n",
+    "    \"X_test_sample\": X_test.iloc[:2000] if hasattr(X_test, \"iloc\") else X_test[:2000],\n",
+    "\n",
+    " \n",
+    "    # KNN-specific information for tuning visualizations\n",
+    "\n",
+    "    # Subsample fraction used for fast tuning\n",
+    "    \"subsample_fraction\": subsample_fraction,\n",
+    "\n",
+    "    # Validation F1 scores for p = 1 and p = 2 (distance metric comparison)\n",
+    "    \"val_f1_p1\": val_f1_p1,\n",
+    "    \"val_f1_p2\": val_f2_p2 if \"val_f2_p2\" in globals() else None,  # if you later define this\n",
+    "\n",
+    "    # Best params / scores for each distance setting\n",
+    "    \"best_params_p1\": grid_p1.best_params_,\n",
+    "    \"best_score_p1\": grid_p1.best_score_,\n",
+    "    \"best_params_p2\": grid_p2.best_params_,\n",
+    "    \"best_score_p2\": grid_p2.best_score_,\n",
+    "\n",
+    "    # Full GridSearchCV results to build hyperparameter tuning curves later\n",
+    "    \"cv_results_p1\": grid_p1.cv_results_,\n",
+    "    \"cv_results_p2\": grid_p2.cv_results_,\n",
+    "\n",
+    "    # n_neighbors values searched (for plotting k vs score)\n",
+    "    \"k_values\": np.array(param_grid_p1[\"n_neighbors\"], dtype=int),\n",
+    "\n",
+    "    # Raw trained models if you ever want to reuse them\n",
+    "    \"knn_p1_model\": knn_p1,\n",
+    "    \"knn_p2_model\": knn_p2,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# 3. Save bundle to ../../Results/Visualizations\n",
+    "save_path = \"../../Results/Visualizations\"\n",
+    "os.makedirs(save_path, exist_ok=True)\n",
+    "\n",
+    "bundle_filename = os.path.join(save_path, \"knn_bundle.pkl\")\n",
+    "\n",
+    "with open(bundle_filename, \"wb\") as f:\n",
+    "    pickle.dump(bundle, f)\n",
+    "\n",
+    "print(f\"\\nKNN pickle bundle saved to:\\n{bundle_filename}\")\n",
+    "print(\"Bundle keys:\", list(bundle.keys()))"
    ]
   }
  ],
