--- a/Code/data-visulalization/KNN_model.ipynb
+++ b/Code/data-visulalization/KNN_model.ipynb
@@ -181,6 +181,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3dbd1bd",
+   "metadata": {},
+   "source": [
+    "Interpretation: KNN Precision–Recall Curve\n",
+    "\n",
+    "This plot shows how well the KNN model distinguishes each class under a one-vs-rest setup. Class 3 stands out with a very strong average precision (AP ≈ 0.94), meaning KNN consistently identifies it with high confidence across different recall levels. Class 1 performs moderately (AP ≈ 0.36), showing that predictions become noisy as recall increases. Class 4, however, collapses almost instantly (AP ≈ 0.04), indicating that KNN struggles heavily with this class. This uneven behavior highlights that KNN is highly sensitive to density differences across the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "69d484b9",
    "metadata": {},
    "source": [
@@ -238,6 +248,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8237f89d",
+   "metadata": {},
+   "source": [
+    "Interpretation: KNN Distance Comparison (Manhattan vs. Euclidean)\n",
+    "\n",
+    "This plot compares the average neighbor distances under Manhattan (p=1) and Euclidean (p=2) metrics. Euclidean distances cluster tightly at much smaller values, meaning points appear closer together in this metric. Manhattan distances spread much wider, showing greater separation between samples. This visualization basically shows how the choice of distance metric reshapes the entire neighborhood structure for KNN."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4d925984",
    "metadata": {},
    "source": [
@@ -275,6 +295,16 @@
     "plt.ylabel(\"Frequency\")\n",
     "plt.grid(alpha=0.3)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2b45e2e",
+   "metadata": {},
+   "source": [
+    "Interpretation: KNN Prediction Confidence Distribution\n",
+    "\n",
+    "This plot shows how confident the KNN model is in its predictions by looking at the maximum predicted probability for each sample. Most predictions fall between 0.35 and 0.55, indicating that the model is generally uncertain and rarely makes strong, high-confidence decisions. Only a small fraction of samples reach confidence levels above 0.8, which suggests that the classes overlap heavily in feature space. This distribution underscores why KNN struggles on this dataset, the model often cannot distinguish clear nearest-neighbor patterns, leading to weak decision boundaries and inconsistent classification confidence."
    ]
   }
  ],
