--- a/Code/data-visulalization/NB.ipynb
+++ b/Code/data-visulalization/NB.ipynb
@@ -1064,6 +1064,16 @@
     "\n",
     "fig.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52a729e9",
+   "metadata": {},
+   "source": [
+    "Interpretation : Naive Bayes Probability Space\n",
+    "\n",
+    "This plot projects Naive Bayes predictions into a 2-D probability simplex, showing how the model distributes probability across classes. The dense spread of points across the interior (rather than forming clear clusters) indicates that NB assigns similar probability patterns to many samples, making separation difficult. The frequent overlap of colors (true classes) suggests that feature independence assumptions are too strong for this dataset. As a result, NB often cannot produce confident or well-separated class predictions."
+   ]
   }
  ],
  "metadata": {
