--- a/Code/data-visulalization/SVM.ipynb
+++ b/Code/data-visulalization/SVM.ipynb
@@ -186,6 +186,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e40d3a2",
+   "metadata": {},
+   "source": [
+    "Interpretation : SVM Decision Function Score Distribution\n",
+    "\n",
+    "This distribution shows how far each sample lies from the SVM decision boundary. Most decision scores cluster tightly around 0, indicating that a large portion of the data points lie very close to the margin—meaning the classes are not well separated in feature space. Only a small number of samples fall into the extreme tails, suggesting that the model is confident for very few points. This pattern reflects the difficulty of the dataset, the SVM struggles to form strong margins because the class boundaries heavily overlap."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "63a7796d",
    "metadata": {},
    "source": [
@@ -1096,6 +1106,16 @@
     ")\n",
     "\n",
     "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e4b774b",
+   "metadata": {},
+   "source": [
+    "Interpretation: PCA Visualization (SVM Correct vs Misclassified)\n",
+    "\n",
+    "This plot projects the data into two PCA components to visualize how separable the classes are for SVM. The heavy overlap between green (correct) and red (misclassified) points shows that the reduced feature space does not form clean, separable clusters. Misclassified points scatter throughout the same regions as correctly classified ones, suggesting the underlying class structure is highly tangled. This reinforces that the dataset is inherently difficult for linear or margin-based models like SVM."
    ]
   }
  ],
