NB interactive plot

--- a/Code/data-visulalization/NB.ipynb
+++ b/Code/data-visulalization/NB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7c994bcc",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "acd8dfbd",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "0a3a2f0a",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "284bbe28",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,10 @@
     "    title=\"Interactive NB Probability Space (Hover to Inspect Misclassifications)\"\n",
     ")\n",
     "\n",
-    "fig.show()\n"
+    "fig.show()\n",
+    "fig.write_html(\"../../Results/Visualizations/Final_visualizations/NB_plot.html\")\n",
+    "fig.write_image(\"../../Results/Visualizations/Final_visualizations/NB_plot.png\")\n",
+    "\n"
    ]
   },
   {
