added docs folder for html results

--- a/Code/data-visulalization/NB.ipynb
+++ b/Code/data-visulalization/NB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "7c994bcc",
    "metadata": {},
    "outputs": [
@@ -17,9 +17,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/miniconda3/envs/myenv/lib/python3.11/site-packages/sklearn/base.py:442: InconsistentVersionWarning: Trying to unpickle estimator GaussianNB from version 1.7.2 when using version 1.7.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "/opt/miniconda3/envs/myenv/lib/python3.11/site-packages/sklearn/base.py:442: InconsistentVersionWarning:\n",
+      "\n",
+      "Trying to unpickle estimator GaussianNB from version 1.7.2 when using version 1.7.1. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
       "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n"
+      "\n"
      ]
     }
    ],
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "acd8dfbd",
    "metadata": {},
    "outputs": [
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "0a3a2f0a",
    "metadata": {},
    "outputs": [
@@ -139,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "284bbe28",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1065,7 @@
     ")\n",
     "\n",
     "fig.show()\n",
-    "fig.write_html(\"../../Results/Visualizations/Final_visualizations/NB_plot.html\")\n",
+    "fig.write_html(\"../../docs/NB_plot.html\")\n",
     "fig.write_image(\"../../Results/Visualizations/Final_visualizations/NB_plot.png\")\n",
     "\n"
    ]
