--- a/Code/data-visulalization/NB.ipynb
+++ b/Code/data-visulalization/NB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "7c994bcc",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "acd8dfbd",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "0a3a2f0a",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "284bbe28",
    "metadata": {},
    "outputs": [
@@ -1065,8 +1065,35 @@
     ")\n",
     "\n",
     "fig.show()\n",
-    "fig.write_html(\"../../docs/NB_plot.html\")\n",
     "fig.write_image(\"../../Results/Visualizations/Final_visualizations/NB_plot.png\")\n",
+    "\n",
+    "# Convert the figure to HTML\n",
+    "html_content = fig.to_html(\n",
+    "    include_plotlyjs=\"cdn\",\n",
+    "    full_html=True\n",
+    ")\n",
+    "\n",
+    "# Your interpretation text (exact wording)\n",
+    "interpretation_html = \"\"\"\n",
+    "<div style=\"margin-top: 30px; font-family: Arial; font-size: 15px; line-height: 1.6;\">\n",
+    "    <h3>Interpretation</h3>\n",
+    "    <p>\n",
+    "    This plot projects Naive Bayes predictions into a 2-D probability simplex, showing how the model \n",
+    "    distributes probability across classes. The dense spread of points across the interior (rather \n",
+    "    than forming clear clusters) indicates that NB assigns similar probability patterns to many samples, \n",
+    "    making separation difficult. The frequent overlap of colors (true classes) suggests that feature \n",
+    "    independence assumptions are too strong for this dataset. As a result, NB often cannot produce \n",
+    "    confident or well-separated class predictions.\n",
+    "    </p>\n",
+    "</div>\n",
+    "\"\"\"\n",
+    "\n",
+    "# Combine the plot + interpretation section\n",
+    "final_html = html_content.replace(\"</body>\", interpretation_html + \"</body>\")\n",
+    "\n",
+    "# Save final HTML file\n",
+    "with open(\"../../docs/NB_plot.html\", \"w\") as f:\n",
+    "    f.write(final_html)\n",
     "\n"
    ]
   },
