saving plots in html

--- a/Code/data-visulalization/NB.ipynb
+++ b/Code/data-visulalization/NB.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "284bbe28",
    "metadata": {},
    "outputs": [
@@ -234,6 +234,7 @@
           ]
          ]
         },
+        "height": 600,
         "legend": {
          "tracegroupgap": 0
         },
@@ -1064,6 +1065,7 @@
     "    title=\"Interactive NB Probability Space (Hover to Inspect Misclassifications)\"\n",
     ")\n",
     "\n",
+    "fig.update_layout(height=600)\n",
     "fig.show()\n",
     "fig.write_image(\"../../Results/Visualizations/Final_visualizations/NB_plot.png\")\n",
     "\n",
@@ -1073,7 +1075,7 @@
     "    full_html=True\n",
     ")\n",
     "\n",
-    "# Your interpretation text (exact wording)\n",
+    "# Your interpretation text \n",
     "interpretation_html = \"\"\"\n",
     "<div style=\"margin-top: 30px; font-family: Arial; font-size: 15px; line-height: 1.6;\">\n",
     "    <h3>Interpretation</h3>\n",
