--- a/Code/data-visulalization/logit.ipynb
+++ b/Code/data-visulalization/logit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "035b0047",
    "metadata": {},
    "outputs": [
@@ -57,6 +57,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -76,7 +85,8 @@
     "plt.title(\"Confusion Matrix — Logistic Regression\")\n",
     "plt.xlabel(\"Predicted\")\n",
     "plt.ylabel(\"Actual\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/LR_Confusion_Matrix_plot.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -114,6 +124,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -141,7 +160,8 @@
     "plt.title(\"ROC Curve (One-vs-Rest) — Logistic Regression\")\n",
     "plt.legend()\n",
     "plt.grid(alpha=0.3)\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/LR_ROC_curve_plot.png\", dpi=300, bbox_inches=\"tight\")\n"
    ]
   },
   {
@@ -166,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "28ce8a5d",
    "metadata": {},
    "outputs": [
@@ -1196,7 +1216,38 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "\n"
+    "\n",
+    "# Save PNG version\n",
+    "fig.write_image(\"../../Results/Visualizations/Final_visualizations/LR_probability_plot.png\")\n",
+    "\n",
+    "# ---- Embed Interpretation in HTML ----\n",
+    "html_content = fig.to_html(\n",
+    "    include_plotlyjs=\"cdn\",\n",
+    "    full_html=True\n",
+    ")\n",
+    "\n",
+    "interpretation_html = \"\"\"\n",
+    "<div style=\"margin-top: 20px; font-family: Arial; font-size: 15px; line-height: 1.6;\">\n",
+    "    <h3>Interpretation</h3>\n",
+    "    <p>\n",
+    "    This plot maps each sample into a 2-D probability space (Class 1 vs. Class 4) to show how the Logistic Regression \n",
+    "    model separates the classes. We can see clear, color-clustered regions where the model is confident, especially \n",
+    "    in areas dominated by a single predicted class (dark purple for Class 1 and yellow for Class 4).\n",
+    "    </p>\n",
+    "    <p>\n",
+    "    However, the large overlapping zone in the center shows high ambiguity, where multiple classes receive similar \n",
+    "    probabilities. This overlap reflects why Logistic Regression struggles on this dataset — the decision boundaries \n",
+    "    are not expressive enough to cleanly separate the classes.\n",
+    "    </p>\n",
+    "</div>\n",
+    "\"\"\"\n",
+    "\n",
+    "# Combine plot + interpretation\n",
+    "final_html = html_content.replace(\"</body>\", interpretation_html + \"</body>\")\n",
+    "\n",
+    "# Save HTML version\n",
+    "with open(\"../../docs/LR_plot.html\", \"w\") as f:\n",
+    "    f.write(final_html)\n"
    ]
   },
   {
