--- a/Code/data-visulalization/KNN_model.ipynb
+++ b/Code/data-visulalization/KNN_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a8e5b943",
    "metadata": {},
    "outputs": [
@@ -10,26 +10,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded bundle keys: dict_keys(['model_name', 'y_test', 'y_pred', 'y_proba', 'confusion_matrix', 'accuracy', 'precision_macro', 'recall_macro', 'f1_macro', 'log_loss', 'roc_auc_ovr', 'params', 'feature_names', 'X_test_sample', 'subsample_fraction', 'val_f1_p1', 'val_f1_p2', 'best_params_p1', 'best_score_p1', 'best_params_p2', 'best_score_p2', 'cv_results_p1', 'cv_results_p2', 'k_values', 'knn_p1_model', 'knn_p2_model'])\n"
+      "Bundle keys: dict_keys(['model_name', 'y_test', 'y_pred', 'y_proba', 'confusion_matrix', 'accuracy', 'precision_macro', 'recall_macro', 'f1_macro', 'log_loss', 'roc_auc_ovr', 'params', 'feature_names', 'X_test_sample', 'subsample_fraction', 'val_f1_p1', 'val_f1_p2', 'best_params_p1', 'best_score_p1', 'best_params_p2', 'best_score_p2', 'cv_results_p1', 'cv_results_p2', 'k_values', 'knn_p1_model', 'knn_p2_model'])\n"
      ]
     }
    ],
    "source": [
     "import pickle\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay, roc_curve, auc\n",
-    "from sklearn.preprocessing import label_binarize\n",
-    "\n",
-    "\n",
-    "# Load Decision Tree bundle (adjust path if your notebook is elsewhere)\n",
-    "bundle_path = \"../../Results/Visualizations/knn_bundle.pkl\"\n",
+    "bundle_path = \"knn_bundle.pkl\"\n",
     "\n",
     "with open(bundle_path, \"rb\") as f:\n",
     "    knn_bundle = pickle.load(f)\n",
     "\n",
-    "print(\"Loaded bundle keys:\", knn_bundle.keys())"
+    "print(\"Bundle keys:\", knn_bundle.keys())"
    ]
   },
   {
@@ -42,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "cd558035",
    "metadata": {},
    "outputs": [
@@ -67,6 +60,7 @@
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm)\n",
     "disp.plot(cmap=\"Blues\", values_format='d')\n",
     "plt.title(\"KNN Confusion Matrix (Final Model)\")\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/KNN_Confusion_Matrix_plot.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -80,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "92aff5e2",
    "metadata": {},
    "outputs": [
@@ -121,6 +115,7 @@
     "plt.ylabel(\"True Positive Rate\")\n",
     "plt.title(\"KNN ROC Curve (One-vs-Rest)\")\n",
     "plt.legend()\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/KNN_ROC_Curve_plot.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -134,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "9ea9360f",
    "metadata": {},
    "outputs": [
@@ -174,6 +169,7 @@
     "plt.title(\"KNN Precision–Recall Curve (One-vs-Rest)\")\n",
     "plt.legend()\n",
     "plt.grid(alpha=0.3)\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/KNN_Recall_Curve_plot.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "\n",
     "\n"
@@ -199,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "5270a7b5",
    "metadata": {},
    "outputs": [
@@ -243,6 +239,7 @@
     "plt.ylabel(\"Frequency\")\n",
     "plt.legend()\n",
     "plt.grid(alpha=0.3)\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/KNN_Distance_Comparison_plot.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()\n"
    ]
   },
@@ -266,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "77d95e2e",
    "metadata": {},
    "outputs": [
@@ -294,6 +291,7 @@
     "plt.xlabel(\"Maximum Predicted Probability\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "plt.grid(alpha=0.3)\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/KNN_Confidence_Distribution_plot.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()\n"
    ]
   },
@@ -310,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -324,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
