--- a/Code/data-visulalization/Random_Forest_Visualization.ipynb
+++ b/Code/data-visulalization/Random_Forest_Visualization.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "1548de04-919f-4bbd-b154-ee5ed86c5044",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "59d4306c-8ee5-43f2-a1bd-5f714525f7f8",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "54fadd7b-4982-4d63-825e-84cf72bd9cdb",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
     "ax.set_ylabel(\"True label\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "# plt.savefig(\"../../Results/Visualizations/rf_confusion_matrix.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/RF_confusion_matrix.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "\n"
    ]
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "824d9480-86f3-4ea6-a69e-16110c750b32",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
     "plt.legend(loc=\"lower right\")\n",
     "plt.tight_layout()\n",
     "\n",
-    "# plt.savefig(\"../../Results/Visualizations/rf_roc_curves.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/RF_roc_curves.png\", dpi=300, bbox_inches=\"tight\")\n",
     "\n",
     "plt.show()\n"
    ]
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "fbaf91a4-c475-46b1-8a08-786735babac8",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
     "plt.title(\"Random Forest – Feature Importance (Gini)\")\n",
     "plt.tight_layout()\n",
     "\n",
-    "# plt.savefig(\"../../Results/Visualizations/rf_feature_importance.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/RF_feature_importance.png\", dpi=300, bbox_inches=\"tight\")\n",
     "\n",
     "plt.show()\n",
     "\n"
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "cdd79f26-4259-488b-a88a-1b81028eaca3",
    "metadata": {},
    "outputs": [
@@ -370,8 +370,7 @@
     "    f\"(Target class {high_risk_class})\"\n",
     ")\n",
     "plt.tight_layout()\n",
-    "# plt.savefig(\"../../Results/Visualizations/rf_partial_dependence_top_feature.png\",\n",
-    "#             dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/RF_partial_dependence_top_feature.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "\n"
    ]
