--- a/Code/data-visulalization/Decision_Tree.ipynb
+++ b/Code/data-visulalization/Decision_Tree.ipynb
@@ -2,20 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "44d288b7-64e5-49d8-9e63-bd79a424966e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../../Results/Visualizations/decision_tree_bundle.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Load Decision Tree bundle (adjust path if your notebook is elsewhere)\u001b[39;00m\n\u001b[32m     10\u001b[39m bundle_path = \u001b[33m\"\u001b[39m\u001b[33m../../Results/Visualizations/decision_tree_bundle.pkl\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mbundle_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mrb\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     13\u001b[39m     dt_bundle = pickle.load(f)\n\u001b[32m     15\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mLoaded bundle keys:\u001b[39m\u001b[33m\"\u001b[39m, dt_bundle.keys())\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/miniconda3/envs/myenv/lib/python3.11/site-packages/IPython/core/interactiveshell.py:343\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    336\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    337\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    338\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    339\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    340\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    341\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m343\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: '../../Results/Visualizations/decision_tree_bundle.pkl'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded bundle keys: dict_keys(['model_name', 'y_test', 'y_pred', 'y_proba', 'confusion_matrix', 'accuracy', 'precision_macro', 'recall_macro', 'f1_macro', 'log_loss', 'roc_auc_ovr', 'params', 'dt_feature_importance', 'dt_feature_names', 'feature_names', 'X_test_sample'])\n"
      ]
     }
    ],
@@ -29,7 +24,7 @@
     "\n",
     "\n",
     "# Load Decision Tree bundle (adjust path if your notebook is elsewhere)\n",
-    "bundle_path = \"../../Results/Visualizations/decision_tree_bundle.pkl\"\n",
+    "bundle_path = \"../../Results/Pickle_Bundles/decision_tree_bundle.pkl\"\n",
     "\n",
     "with open(bundle_path, \"rb\") as f:\n",
     "    dt_bundle = pickle.load(f)\n",
@@ -47,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0c53f454-a869-4d57-b27a-2ec7fe7e9a25",
    "metadata": {},
    "outputs": [
@@ -78,13 +73,13 @@
     "\n",
     "ax.set_title(\"Decision Tree – Confusion Matrix\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/DT_Confusion_Matrix_plot.png\", dpi=300, bbox_inches=\"tight\")\n"
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/DT_confusion_matrix.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "87f80866-a61a-406b-9226-d5cac8c07d27",
    "metadata": {},
    "outputs": [
@@ -165,13 +160,13 @@
     "plt.title(\"Decision Tree – ROC Curves (One-vs-Rest)\")\n",
     "plt.legend(loc=\"lower right\", fontsize=8)\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/DT_ROC_Curve_plot.png\", dpi=300, bbox_inches=\"tight\")"
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/DT_roc_curves.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2255fb86-a48c-4e3a-9da5-6fb8622f43f0",
    "metadata": {},
    "outputs": [
@@ -223,8 +218,9 @@
     "plt.xlabel(\"Gini Importance\")\n",
     "plt.title(\"Decision Tree – Top Feature Importances\")\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/DT_feature_importance.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()\n",
-    "plt.savefig(\"../../Results/Visualizations/Final_visualizations/DT_Feature_Importance_plot.png\", dpi=300, bbox_inches=\"tight\")\n"
+    "\n"
    ]
   },
   {
