makefile and GitHub workflows complete

--- a/Code/data-visualization/Primary_data_visualization.ipynb
+++ b/Code/data-visualization/Primary_data_visualization.ipynb
@@ -5,11 +5,7 @@
    "id": "e30ccf89-bd03-421e-9e7d-73a44f1cfa15",
    "metadata": {},
    "source": [
-    "# PRELIMINARY DATA VISUALIZATION FOR BRFSS 2024 DATASET\n",
-    "\n",
-    "\n",
-    "### Saneeya & Jyoti\n",
-    "#### 10/25/2025"
+    "# PRELIMINARY DATA VISUALIZATION"
    ]
   },
   {
